# number-general

./: .gitignore  CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci.yml
src/: class.rs  destream.rs  instance.rs  lib.rs  serde.rs  tests.rs
