[package]
name = "number-general"
version = "0.14.0"
authors = ["code@tinychain.net"]
edition = "2021"
description = "A generic number type for Rust which supports basic math and (de)serialization."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/number-general.git"

categories = ["data-structures", "mathematics"]
keywords = ["number", "complex", "float", "integer", "unsigned"]

[features]
hash = ["async-hash"]
stream = ["destream", "futures"]
all = ["hash", "serde", "stream"]
default = ["all"]

[dependencies]
async-hash = { version = "0.5", optional = true }
collate = "0.4"
destream = { version = "0.9", optional = true }
futures = { version = "0.3", optional = true }
get-size2 = "0.1"
get-size-derive2 = "0.1"
num = "0.4"
safecast = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bytes = "1.10"
serde_json = "1.0"

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
trivial_casts = "allow"
unused_qualifications = "allow"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
